13.2.8 (ws)
      - New demo file: inv4.msc: Inventio 4, J.S.Bach BWV 775
      - Midi import: implement time signature meta events
      - Midi import: implement tempo meta events
12.2.8 (ws)
      - fix rendering of double dottet half notes
      - add "double dots" button to note entry toolbar
      - fix crash when removing an instrument (staff/part)
11.2.8 (ws)
      - build up infrastructure for linux midi output
10.2.8 (ws)
      - changed interval entry
      - set output pdf file name in printer dialog to score name
      - start reapeat bar line in first measure of system can now be deleted
      - remove Anchor property from element
      - replace staffIdx and voice in Element() with track
8.2.8 (ws)
      - better spacing: accidental now do not collide with left bar line
      - fix fill color of selected slur
      - calculate better stem with for beamed grace notes
7.2.8 (ws)
      - implemented easy slur creation in note entry mode
6.2.8 (ws)
      - fixed build without JACK
      - midi import: use track name meta information
5.2.8 (ws)
      - added framework for script plugins
4.2.8  (ws)
      - fixed crash in note entry mode
2.2.8  (ws)
      - make alsa driver more robust; dont insist on configured buffer sizes
      - enhanced bb-import
1.2.8  (ws)
      - fixed: sometimes crashes on inserting a new instrument
31.1.8 (ws)
      - fix crash for "H" (hairpin) command
      - build fixes for doc/man
      - added "C clef on third space" to clef table
30.1.8 (ws)
      - if end reapeat found without start repeat, play from beginning
      - install again all language files locale/* instead of all build in. This
        enables translators to test translations with binary version.
      - fixes for navigator window
      - updates to bb import: show chord names
      - save xoff/yoff in mm instead of pixel; increasing *.msc file version to 1.5
29.1.8 (ws)
      - set score dirty bit after editing style or text style so changes