@@ -22,6 +22,7 @@
 //  Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 //=============================================================================
 
+#include "config.h"
 #include "mididriver.h"
 #include "alsa.h"
 #include "preferences.h"
